--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<ngxrclt-utilitarios></ngxrclt-utilitarios>
-<ngxrclt-cards></ngxrclt-cards>
-
-<div class="card2 card-sm">
-    <div class="card-body">
-        <span class="d-block">Mi perfil</span>
-        <div class="d-flex align-items-center justify-content-between position-relative">
-            <span class="display-5">Editar</span>
-            <div class="icon_cpn"><span class="icon_cp"><i class="fa fa-user" style="color: #7a5449;"></i></span></div>
-        </div>
-    </div>
+<div class="jumbotron">
+    <h1 class="display-4">Hello, world!</h1>
+    <p class="lead">Estos son los componentes que tienene esta libreria.</p>
+    <p>Se usa bootsrap y fontawesome para estilo e iconos</p>
 </div>
+
+<rclt-cards titulo="Mi Perfil" subtitulo="Editar"></rclt-cards>
