--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,13 @@
     <h1 class="display-4">Hello, world!</h1>
     <p class="lead">Estos son los componentes que tienene esta libreria.</p>
     <p>Se usa bootsrap y fontawesome para estilo e iconos</p>
+    <p>Se tiene la clases row-no-padding elimina los padding de los costados a las columnas automaticamente </p>
 </div>
 
-<rclt-cards titulo="Mi Perfil" subtitulo="Editar"></rclt-cards>
+<div class="row">
+  <rclt-cards class="col-2" titulo="Mi Perfil" subtitulo="Editar"></rclt-cards>
+  <div class="col-10"></div>
+</div>  
 
 <h3>Basic Buttons</h3>
 <div class="example-button-row">
