--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -4,6 +4,6 @@
         <h3 class="cardsSubtitulo">{{subtitulo}}</h3>
     </div>
     <div [ngClass]="classImagen">
-        <i class="{{icono}} float-right cardIcono" style="color: #7a5449;"></i>
+        <i class="{{icono}} float-right cardIcono" [style.color]="color"></i>
     </div>
 </div>
