--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,11 @@
 </div>
 
 <div class="row">
-  <rclt-cards class="col-2" titulo="Mi Perfil" subtitulo="Editar"></rclt-cards>
+  <rclt-cards class="col-2" titulo="Mi Perfil" subtitulo="Editar" color="#fd3212"></rclt-cards>
   <div class="col-10"></div>
+</div>  
+<div class="row">
+  <rclt-cards-img-text class="col-12" titulo="Mi Perfil" subtitulo="Editar" color="#fd3212"></rclt-cards-img-text>
 </div>  
 
 <h3>Basic Buttons</h3>
