--- a/src/app/cards/cards.component.css
+++ b/src/app/cards/cards.component.css
@@ -27,10 +27,11 @@
 }
 
 .cardIcono{
+    margin: 50% 0 0 0;
     padding: 0.7rem 0.5rem 0.5rem 0;
 }
 
-.fontSize40{
+.fontSize2-5{
     font-size: 2.5rem;
     padding-right: 0rem;
 }
