--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -3,7 +3,7 @@
         <h2 class="cardsTitulo">{{titulo}}</h2>
         <h3 class="cardsSubtitulo">{{subtitulo}}</h3>
     </div>
-    <div [ngClass]="classImagen">
+    <div [ngClass]="classIcono">
         <i class="{{icono}} float-right cardIcono" [style.color]="color"></i>
     </div>
 </div>
