--- a/src/app/cards-img-text/cards-img-text.component.html
+++ b/src/app/cards-img-text/cards-img-text.component.html
@@ -1,4 +1,4 @@
-<div class="row cards row-no-padding" [style.color]="color">
+<div class="row cards row-no-padding" [style.color]="color" (click)="clickCard($event)">
     <div class="col-2 float-left">
         <img class="cardsImagen" src={{imagen}} [style.height]="height" />
     </div>
