--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,4 +1,4 @@
-<div class="cards">
+<div class="cards" (click)="clickCard($event)">
     <div [ngClass]="classTexto">
         <h2 class="cardsTitulo">{{titulo}}</h2>
         <h3 class="cardsSubtitulo">{{subtitulo}}</h3>
