--- a/projects/ngx-utilitario-rclt/src/lib/cards/cards.component.css
+++ b/projects/ngx-utilitario-rclt/src/lib/cards/cards.component.css
@@ -30,6 +30,11 @@
     padding: 0.7rem 0.5rem 0.5rem 0;
 }
 
+.classIcono{
+    display: table-cell;
+    width: auto;
+}
+
 .fontSize2-5{
     font-size: 2.5rem;
     padding-right: 0rem;
