--- a/src/app/cards-img-text/cards-img-text.component.css
+++ b/src/app/cards-img-text/cards-img-text.component.css
@@ -4,10 +4,15 @@
     cursor: pointer;
     width: 100%;
     float: left;
+    display: table !important;
 }
 
 .cards:hover{
     background-color: rgba(0, 0, 0, 0.05);
+    -moz-transform: translateX(5px);
+    -ms-transform: translateX(5px);
+    -webkit-transform: translateX(5px);
+    transform: translateX(5px);
 }
 
 .cardsImagen{
@@ -46,9 +51,13 @@
 }
 .cardIcono{
     padding: 0.7rem 0.5rem 0.5rem 0;
+    display: table-cell;
+    width: auto;
 }
 
 .fontSize40{
     font-size: 2.5rem;
     padding-right: 0rem;
 }
+
+
