creacion de archivos para los compoentes cards-img-text-ndiv

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,9 @@
 <div class="row">
   <rclt-cards-img-text class="col-12" titulo="Mi Perfil" subtitulo="Editar" color="#fd3212"></rclt-cards-img-text>
 </div>  
+<div>
 
+</div>
 <h3>Basic Buttons</h3>
 <div class="example-button-row">
   <button mat-button>Basic</button>
