--- a/src/app/cards/cards.component.css
+++ b/src/app/cards/cards.component.css
@@ -25,6 +25,13 @@
     line-height: 1.5;
     padding: 0 0 0 1.2rem;  
 }
+.cardsContenido{
+    color: #595959;
+    font-size: 1.0rem;
+    font-weight: 500;
+    line-height: 1.2;
+    padding: 0 0 0 1.2rem; 
+}
 
 .cardIcono{
     padding: 0.7rem 0.5rem 0.5rem 0;
