--- a/src/app/cards-img-text/cards-img-text.component.html
+++ b/src/app/cards-img-text/cards-img-text.component.html
@@ -7,6 +7,7 @@
             <h2 class="cardsTitulo" [style.color]="color">{{titulo}}</h2>
             <h3 class="cardsDescripcion">{{descripcion}}</h3>
             <h3 class="cardsEtiqueta" [style.background]="color">{{etiqueta}}</h3>
+            <h3 class="cardsContenido"><ng-content></ng-content></h3>
         </div>
     </div>
     <div [ngClass]="classIcono">
