--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -2,7 +2,9 @@
     <div [ngClass]="classTexto">
         <h2 class="cardsTitulo">{{titulo}}</h2>
         <h3 class="cardsSubtitulo">{{subtitulo}}</h3>
+        <h3 class="cardsContenido"><ng-content></ng-content></h3>
     </div>
+
     <div [ngClass]="classIcono">
         <i class="{{icono}} float-right cardIcono" [style.color]="color"></i>
     </div>
