--- a/projects/ngx-utilitario-rclt/src/lib/cards-img-text/cards-img-text.component.scss
+++ b/projects/ngx-utilitario-rclt/src/lib/cards-img-text/cards-img-text.component.scss
@@ -36,6 +36,14 @@
     padding: 0 0 0 1.2rem;  
 }
 
+.cardsContenido{
+    color: #595959;
+    font-size: 1.0rem;
+    font-weight: 500;
+    line-height: 1.2;
+    padding: 0 0 0 1.2rem; 
+}
+
 .cardsEtiqueta{
     display: inline-block;
     margin: 0 0 0 1.2rem;
@@ -58,5 +66,3 @@
     font-size: 2.5rem;
     padding-right: 0rem;
 }
-
-
