--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,20 @@
 <div class="row">
   <rclt-cards-img-text class="col-12" titulo="Mi Perfil" subtitulo="Editar" color="#fd3212"></rclt-cards-img-text>
 </div>  
-<div>
-
+<div class="row">
+  <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star"></rclt-repeat-icon>
 </div>
+
+<div class="jumbotron">
+    <h1>pipes</h1>
+    <h3>| numberToArray'</h3>
+</div>
+<ul>
+    <li>Method First Using PIPE</li>
+    <li *ngFor='let key of 5 | numberToArray'>
+      {{key}}
+    </li>
+  </ul>
 <h3>Basic Buttons</h3>
 <div class="example-button-row">
   <button mat-button>Basic</button>
