--- a/src/app/repeat-icon/repeat-icon.component.html
+++ b/src/app/repeat-icon/repeat-icon.component.html
@@ -1,3 +1,4 @@
-<p>
-  repeat-icon works!
-</p>
+<div class="justify-content-center">
+    <i *ngFor="let item of activo | numberToArray" class="{{icono}}"  [style.color]="colorActivo"></i>
+    <i *ngFor="let item of (repetir - activo) | numberToArray" class="{{icono}}"  [style.color]="color"></i>
+</div>
