bug en cards-img-ndiv

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,11 @@
   <rclt-cards-img-text class="col-12" titulo="Mi Perfil" subtitulo="Editar" color="#fd3212"></rclt-cards-img-text>
 </div>  
 <div class="row">
+  <rclt-cards-img-text-ndiv class="col-12" titulo="Mi Perfil" subtitulo="Editar" color="#fd3212" [contenido]="[1,1,1,'content']">
+    <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star"></rclt-repeat-icon>
+  </rclt-cards-img-text-ndiv>
+</div>  
+<div class="row">
   <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star"></rclt-repeat-icon>
 </div>
 
