--- a/projects/ngx-utilitario-rclt/src/lib/repeat-icon/repeat-icon.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/repeat-icon/repeat-icon.component.html
@@ -1,2 +1,4 @@
-<i *ngFor="let item of activo | numberToArray" class="{{icono}}" [style.color]="colorActivo"></i>
-<i *ngFor="let item of (repetir - activo) | numberToArray" class="{{icono}}" [style.color]="color"></i>
+<ng-container class="repetirIcono">
+    <i *ngFor="let item of activo | numberToArray" class="{{icono}}" [style.color]="colorActivo"></i>
+    <i *ngFor="let item of (repetir - activo) | numberToArray" class="{{icono}}" [style.color]="color"></i>
+</ng-container>
