--- a/projects/ngx-utilitario-rclt/src/lib/cards-img-text/cards-img-text.component.scss
+++ b/projects/ngx-utilitario-rclt/src/lib/cards-img-text/cards-img-text.component.scss
@@ -5,6 +5,13 @@
     width: 100%;
     float: left;
     display: table !important;
+    margin: 10px 0;
+    -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    -moz-transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+    transition: 0.5s ease;
 }
 
 .cards:hover{
@@ -18,7 +25,6 @@
 .cardsImagen{
     width: 100%;
     object-fit: fill;
-    padding-left: 1.2rem;
 }
 
 .cardsTitulo{
