--- a/src/app/cards-img-text/cards-img-text.component.css
+++ b/src/app/cards-img-text/cards-img-text.component.css
@@ -5,6 +5,13 @@
     width: 100%;
     float: left;
     display: table !important;
+    -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    -moz-transition: 0.5s ease;
+    -webkit-transition: 0.5s ease;
+    transition: 0.5s ease;
+    margin: 10px 0;
 }
 
 .cards:hover{
