--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,21 @@
   <rclt-list-chat class="col-12"></rclt-list-chat>
 </div>
 
-
+<div>
+  <h1>Modal</h1>
+  <button (click)="openModal('custom-modal-1')">Open Modal 1</button>
+  <button (click)="openModal('custom-modal-2')">Open Modal 2</button>
+</div>
+<rclt-modal id="custom-modal-1">
+  <h1>A Custom Angular 7 Modal!</h1>
+  <p>Home page text: <input type="text"  /></p>
+  <button (click)="closeModal('custom-modal-1');">Close</button>
+</rclt-modal>
+<rclt-modal id="custom-modal-2">
+  <h1>A Custom Angular 7 Modal!</h1>
+  <h1 style="height:1000px">A Tall Custom Modal!</h1>
+  <button (click)="closeModal('custom-modal-2');">Close</button>
+</rclt-modal>
 <div class="jumbotron">
   <h1>pipes</h1>
   <h3>| numberToArray'</h3>
