--- a/projects/ngx-utilitario-rclt/src/lib/cards-img-text-ndiv/cards-img-text-ndiv.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/cards-img-text-ndiv/cards-img-text-ndiv.component.html
@@ -12,7 +12,7 @@
             </h3>
         </div>
     </div>
-    <div *ngFor="let item of contenido" class="col-1 float-left center-middle" [style.line-height]="height">
+    <div *ngFor="let item of contenido" class="col-1 float-left center-middle text-center" style="color:#000" [style.line-height]="height">
         <ng-content *ngIf="item==='content'"></ng-content>
         <span *ngIf="item!=='content'">{{item}}</span>
     </div>
