--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,14 +20,14 @@
     </rclt-repeat-icon>
   </rclt-cards-img-text-ndiv>
 </div>
-<div class="row">
-  <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star"></rclt-repeat-icon>
+<div class="container-fluid">
+    <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star"></rclt-repeat-icon>
 </div>
-<div class="row">
+<div class="container-fluid">
   <rclt-list-chat class="col-12"></rclt-list-chat>
 </div>
 
-<div>
+<div class="container-fluid">
   <h1>Modal</h1>
   <button (click)="openModal('custom-modal-1')">Open Modal 1</button>
   <button (click)="openModal('custom-modal-2')">Open Modal 2</button>
@@ -38,8 +38,8 @@
   <button (click)="closeModal('custom-modal-1');">Close</button>
 </rclt-modal>
 <rclt-modal id="custom-modal-2">
-  <h1>A Custom Angular 7 Modal!</h1>
-  <h1 style="height:1000px">A Tall Custom Modal!</h1>
+  <h1 style="height: 1000px;" >A Custom Angular 7 Modal!</h1>
+  <h1 >A Tall Custom Modal!</h1>
   <button (click)="closeModal('custom-modal-2');">Close</button>
 </rclt-modal>
 <div class="jumbotron">
@@ -52,48 +52,19 @@
     {{key}}
   </li>
 </ul>
-<h3>Basic Buttons</h3>
-<div class="example-button-row">
-  <button mat-button>Basic</button>
-  <button mat-button color="primary">Primary</button>
-  <button mat-button color="accent">Accent</button>
-  <button mat-button color="warn">Warn</button>
-  <button mat-button disabled>Disabled</button>
-  <a mat-button routerLink=".">Link</a>
-</div>
+<div class="container-fluid">
 
-<h3>Raised Buttons</h3>
-<div class="example-button-row">
-  <button mat-raised-button>Basic</button>
-  <button mat-raised-button color="primary">Primary</button>
-  <button mat-raised-button color="accent">Accent</button>
-  <button mat-raised-button color="warn">Warn</button>
-  <button mat-raised-button disabled>Disabled</button>
-  <a mat-raised-button routerLink=".">Link</a>
-</div>
-
-<h3>Stroked Buttons</h3>
-<div class="example-button-row">
-  <button mat-stroked-button>Basic</button>
-  <button mat-stroked-button color="primary">Primary</button>
-  <button mat-stroked-button color="accent">Accent</button>
-  <button mat-stroked-button color="warn">Warn</button>
-  <button mat-stroked-button disabled>Disabled</button>
-  <a mat-stroked-button routerLink=".">Link</a>
-</div>
-
-<h3>Flat Buttons</h3>
-<div class="example-button-row">
-  <button mat-flat-button>Basic</button>
-  <button mat-flat-button color="primary">Primary</button>
-  <button mat-flat-button color="accent">Accent</button>
-  <button mat-flat-button color="warn">Warn</button>
-  <button mat-flat-button disabled>Disabled</button>
-  <a mat-flat-button routerLink=".">Link</a>
-</div>
-
-<h3>Alternativo tema</h3>
-<div class="tBusca-tema">
+  <h3>Basic Buttons</h3>
+  <div class="example-button-row">
+    <button mat-button>Basic</button>
+    <button mat-button color="primary">Primary</button>
+    <button mat-button color="accent">Accent</button>
+    <button mat-button color="warn">Warn</button>
+    <button mat-button disabled>Disabled</button>
+    <a mat-button routerLink=".">Link</a>
+  </div>
+  
+  <h3>Raised Buttons</h3>
   <div class="example-button-row">
     <button mat-raised-button>Basic</button>
     <button mat-raised-button color="primary">Primary</button>
@@ -101,5 +72,37 @@
     <button mat-raised-button color="warn">Warn</button>
     <button mat-raised-button disabled>Disabled</button>
     <a mat-raised-button routerLink=".">Link</a>
+  </div>
+  
+  <h3>Stroked Buttons</h3>
+  <div class="example-button-row">
+    <button mat-stroked-button>Basic</button>
+    <button mat-stroked-button color="primary">Primary</button>
+    <button mat-stroked-button color="accent">Accent</button>
+    <button mat-stroked-button color="warn">Warn</button>
+    <button mat-stroked-button disabled>Disabled</button>
+    <a mat-stroked-button routerLink=".">Link</a>
+  </div>
+  
+  <h3>Flat Buttons</h3>
+  <div class="example-button-row">
+    <button mat-flat-button>Basic</button>
+    <button mat-flat-button color="primary">Primary</button>
+    <button mat-flat-button color="accent">Accent</button>
+    <button mat-flat-button color="warn">Warn</button>
+    <button mat-flat-button disabled>Disabled</button>
+    <a mat-flat-button routerLink=".">Link</a>
+  </div>
+  
+  <h3>Alternativo tema</h3>
+  <div class="tBusca-tema">
+    <div class="example-button-row">
+      <button mat-raised-button>Basic</button>
+      <button mat-raised-button color="primary">Primary</button>
+      <button mat-raised-button color="accent">Accent</button>
+      <button mat-raised-button color="warn">Warn</button>
+      <button mat-raised-button disabled>Disabled</button>
+      <a mat-raised-button routerLink=".">Link</a>
+    </div>
   </div>
 </div>
