--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -1,38 +1,51 @@
+/**
+* modal center. 
+* modal aparece y desaparece
+*/
+
 .ngx-utilitario-modal{
   position: fixed;
-  top: 0;
+  top: 50%;
+  left: 50%;
   right: 0;
   bottom: 0;
-  left: 0;
-  /* z-index must be higher than .jw-modal-background */
-
+  transform: translate(-50%,-50%);
+  width: fit-content;
+  height: fit-content;
+  max-height: 100%;
+  max-width: 100%; 
   z-index: 1000;
-  /* enables scrolling for tall modals */
-
   overflow: auto;
 }
 
 .ngx-utilitario-modal .ngx-utilitario-modal-body {
-  padding: 20px;
   background: #fff;
-  /* margin exposes part of the modal background */
-
-  margin: 40px;
+  width: fit-content;
+  height: fit-content;
 }
 
 .ngx-utilitario-modal-background {
-  /* modal background fixed across whole screen */
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  /* semi-transparent black  */
-
   background-color: #000;
   opacity: 0.75;
-  /* z-index must be below .jw-modal and above everything else  */
-
   z-index: 900;
+  animation-delay: 2s;
 }
 
+/**
+*
+* Modal animation
+*/
+
+.ngx-utilitario-modal-background{
+  animation-duration: 4s;
+  animation-direction: reverse;
+}
+
+.aparecer{
+  transition: width 2s, height 2s, margin 2s; 
+}
