--- a/src/styles_custom.scss
+++ b/src/styles_custom.scss
@@ -4,3 +4,9 @@
         padding-right: 0 !important;
     }
 }
+
+.ngx-utilitario-modal-background{
+    animation-duration: 4s;
+    animation-direction: reverse;
+  }
+  
