--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -46,6 +46,11 @@
   animation-direction: reverse;
 }
 
-.aparecer{
+/* .aparecer{
   transition: width 2s, height 2s, margin 2s; 
+} */
+
+.ngx-utilitario-modal-open{
+  /* body overflow is hidden to hide main scrollbar when modal window is open */
+  overflow: hidden !important;
 }
