--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,11 +21,18 @@
   </rclt-cards-img-text-ndiv>
 </div>
 <div class="container-fluid">
-    <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star"></rclt-repeat-icon>
+  <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star"></rclt-repeat-icon>
 </div>
 <div class="container-fluid">
   <rclt-list-chat class="col-12"></rclt-list-chat>
 </div>
+
+
+<div class="jumbotron">FormControl</div>
+<div class="container-fluid">
+  <rclt-input class="col-4"></rclt-input>
+</div>
+
 
 <div class="container-fluid">
   <h1>Modal</h1>
@@ -34,12 +41,12 @@
 </div>
 <rclt-modal id="custom-modal-1">
   <h1>A Custom Angular 7 Modal!</h1>
-  <p>Home page text: <input type="text"  /></p>
+  <p>Home page text: <input type="text" /></p>
   <button (click)="closeModal('custom-modal-1');">Close</button>
 </rclt-modal>
 <rclt-modal id="custom-modal-2">
-  <h1 style="height: 1000px;" >A Custom Angular 7 Modal!</h1>
-  <h1 >A Tall Custom Modal!</h1>
+  <h1 style="height: 1000px;">A Custom Angular 7 Modal!</h1>
+  <h1>A Tall Custom Modal!</h1>
   <button (click)="closeModal('custom-modal-2');">Close</button>
 </rclt-modal>
 <div class="jumbotron">
@@ -63,7 +70,7 @@
     <button mat-button disabled>Disabled</button>
     <a mat-button routerLink=".">Link</a>
   </div>
-  
+
   <h3>Raised Buttons</h3>
   <div class="example-button-row">
     <button mat-raised-button>Basic</button>
@@ -73,7 +80,7 @@
     <button mat-raised-button disabled>Disabled</button>
     <a mat-raised-button routerLink=".">Link</a>
   </div>
-  
+
   <h3>Stroked Buttons</h3>
   <div class="example-button-row">
     <button mat-stroked-button>Basic</button>
@@ -83,7 +90,7 @@
     <button mat-stroked-button disabled>Disabled</button>
     <a mat-stroked-button routerLink=".">Link</a>
   </div>
-  
+
   <h3>Flat Buttons</h3>
   <div class="example-button-row">
     <button mat-flat-button>Basic</button>
@@ -93,7 +100,7 @@
     <button mat-flat-button disabled>Disabled</button>
     <a mat-flat-button routerLink=".">Link</a>
   </div>
-  
+
   <h3>Alternativo tema</h3>
   <div class="tBusca-tema">
     <div class="example-button-row">
