creacion de archivos chat

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,9 +23,7 @@
 <div class="container-fluid">
   <rclt-repeat-icon class="col-12" activo=2 color="#9c9c9c" colorActivo="#f2c231" icono="fa fa-star"></rclt-repeat-icon>
 </div>
-<div class="container-fluid">
-  <rclt-list-chat class="col-12"></rclt-list-chat>
-</div>
+
 
 
 <div class="jumbotron">FormControl</div>
@@ -33,6 +31,9 @@
   <rclt-input class="col-4"></rclt-input>
 </div>
 
+<div class="container-fluid">
+  <rclt-chat></rclt-chat>
+</div>
 
 <div class="container-fluid">
   <h1>Modal</h1>
