--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,4 +1,12 @@
-<p>
-  chat works!
-  <rclt-list-chat></rclt-list-chat>
-</p>
+<div class="col-4">
+  <header class="header-chat">
+    Chats
+    <span class="fa fa-pencil-square-o"></span>
+  </header>
+  <rclt-chat-busqueda></rclt-chat-busqueda>
+  <rclt-chat-lista *ngFor="let i of listaMensajes" [detalle]="i"></rclt-chat-lista>
+  <!-- <rclt-list-chat></rclt-list-chat> -->
+</div>
+<div class="col-8">
+
+</div>
