listar los mensajes

--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-lista/chat-lista.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-lista/chat-lista.component.html
@@ -1,3 +1,1 @@
-<p>
-  chat-lista works!
-</p>
+<ngx-utilitario-chat-detalle *ngFor="let item of lista" [detalle]="item"></ngx-utilitario-chat-detalle>
