--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat.component.html
@@ -4,8 +4,7 @@
       <span class="fa fa-pencil-square-o"></span>
     </header>
     <ngx-utilitario-chat-busqueda></ngx-utilitario-chat-busqueda>
-    <ngx-utilitario-lista [lista]="listaMensajes"></ngx-utilitario-chat-lista>
-    <!-- <rclt-list-chat></rclt-list-chat> -->
+    <ngx-utilitario-chat-lista [lista]="lista"></ngx-utilitario-chat-lista>
   </div>
   <div class="col-8">
   
