--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-busqueda/chat-busqueda.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-busqueda/chat-busqueda.component.html
@@ -1,3 +1,3 @@
-<p>
-  chat-busqueda works!
-</p>
+<div class="content ngx-utilitario-busqueda">
+  <input class="col-12 ngx-utilitario-busqueda-input" type="text" placeholder="Busqueda">
+</div>
