--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detalle/chat-detalle.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detalle/chat-detalle.component.html
@@ -1,3 +1,25 @@
-<p>
-  chat-detalle works!
-</p>
+<div class="content ngx-utilitario-chat-detalle">
+  <div class="row">
+    <div class="col-2">
+      <img class="img-fluid rounded-circle" src={{detalle.img}} />
+      <div *ngIf="detalle.estado" class="estadoConectado">
+      </div>
+    </div>
+    <div class="col-8">
+      <div class="content">
+        {{detalle.nombre}}
+      </div>
+      <div class="content">
+        {{detalle.mensaje}}
+      </div>
+    </div>
+    <div class="col-2 float-right text-right">
+      <div class="content">
+        {{detalle.fechaHora}}
+      </div>
+      <div *ngIf="detalle.notificacion>0" class="content ngx-utilitario-label-notificacion">
+        {{detalle.notificacion}}
+      </div>
+    </div>
+  </div>
+</div>
