--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detalle/chat-detalle.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detalle/chat-detalle.component.html
@@ -13,8 +13,8 @@
         {{detalle.mensaje}}
       </div>
     </div>
-    <div class="col-2 float-right text-right">
-      <div class="content">
+    <div class="col-2 float-right text-right ngx-utilitario-fecha-not-chat">
+      <div class="content ngx-utilitario-fecha-chat">
         {{detalle.fechaHora}}
       </div>
       <div *ngIf="detalle.notificacion>0" class="content ngx-utilitario-label-notificacion">
