creacion de chat en app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="container-fluid">
-  <rclt-chat></rclt-chat>
+  <ngx-utilitario-chat></ngx-utilitario-chat>
 </div>
 
 <div class="container-fluid">
