--- a/src/app/chat/chat/chat-conversacion/chat-conversacion.component.html
+++ b/src/app/chat/chat/chat-conversacion/chat-conversacion.component.html
@@ -1,7 +1,7 @@
 <div class="col-12">
   <div class="row">
     <div class="col-2 img-fluid">
-      <img class="img-fluid rounded-circle" src="{{conversacion.img}}" />
+      <img class="img-fluid rounded-circle img-height-3-7" src="{{conversacion.img}}" />
     </div>
     <div class="col-9">
       <div class="row">
@@ -17,8 +17,8 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-12" *ngFor="let item of conversacion.mensajes">
-    <div class="row" *ngIf="lineaDia(item.fecha)">
+  <div class="col-12" *ngFor="let item of conversacion.mensajes; let i=index ">
+    <div class="row" *ngIf="lineaDia(item.fecha,i)">
       <div class="col-12 ngx-utilitario-chat-linea">
         <span class="ngx-utilitario-chat-linea-span">
           {{diferenciaDias(item.fecha)}}
