--- a/src/app/chat/chat/chat-detalle/chat-detalle.component.html
+++ b/src/app/chat/chat/chat-detalle/chat-detalle.component.html
@@ -1,4 +1,4 @@
-<div class="content ngx-utilitario-chat-detalle">
+<div class="content ngx-utilitario-chat-detalle" (click)="click()">
   <div class="row">
     <div class="col-2">
       <img class="img-fluid rounded-circle" src={{detalle.img}} />
