--- a/src/app/chat/chat/chat.component.html
+++ b/src/app/chat/chat/chat.component.html
@@ -5,7 +5,7 @@
         <span class="fa fa-pencil-square-o"></span>
       </header>
       <ngx-utilitario-chat-busqueda></ngx-utilitario-chat-busqueda>
-      <ngx-utilitario-chat-lista [lista]="lista"></ngx-utilitario-chat-lista>
+      <ngx-utilitario-chat-lista [lista]="lista" (clickLista)="clickListaDetalle(event)"></ngx-utilitario-chat-lista>
     </div>
     <div class="col-8">
       <ngx-utilitario-chat-conversacion></ngx-utilitario-chat-conversacion>
