--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat.component.html
@@ -5,9 +5,9 @@
         <span class="fa fa-pencil-square-o"></span>
       </header>
       <ngx-utilitario-chat-busqueda></ngx-utilitario-chat-busqueda>
-      <ngx-utilitario-chat-lista [lista]="lista" (clickLista)="clickListaDetalle(event)"></ngx-utilitario-chat-lista>
+      <ngx-utilitario-chat-lista [lista]="lista" (clickLista)="clickListaDetalle($event)"></ngx-utilitario-chat-lista>
     </div>
     <div class="col-8">
-      <ngx-utilitario-chat-conversacion></ngx-utilitario-chat-conversacion>
+      <ngx-utilitario-chat-conversacion [conversacion]="conversacion"></ngx-utilitario-chat-conversacion>
     </div>
 </div>
