--- a/src/app/chat/chat/chat-lista/chat-lista.component.html
+++ b/src/app/chat/chat/chat-lista/chat-lista.component.html
@@ -1,1 +1,1 @@
-<ngx-utilitario-chat-detalle *ngFor="let item of lista" [detalle]="item" (clickDetalle)="click(event)"></ngx-utilitario-chat-detalle>
+<ngx-utilitario-chat-detalle *ngFor="let item of lista" [detalle]="item" (clickDetalle)="click($event)"></ngx-utilitario-chat-detalle>
