--- a/src/app/chat/chat/chat.component.html
+++ b/src/app/chat/chat/chat.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-4">
-      <header class="header-chat">
-        Chats
-        <span class="fa fa-pencil-square-o"></span>
-      </header>
-      <ngx-utilitario-chat-busqueda></ngx-utilitario-chat-busqueda>
-      <ngx-utilitario-chat-lista [lista]="lista" (clickLista)="clickListaDetalle(event)"></ngx-utilitario-chat-lista>
-    </div>
-    <div class="col-8">
-      <ngx-utilitario-chat-conversacion></ngx-utilitario-chat-conversacion>
-    </div>
+    <header class="header-chat">
+      Chats
+      <span class="fa fa-pencil-square-o"></span>
+    </header>
+    <ngx-utilitario-chat-busqueda></ngx-utilitario-chat-busqueda>
+    <ngx-utilitario-chat-lista [lista]="lista" (clickLista)="clickListaDetalle($event)"></ngx-utilitario-chat-lista>
+  </div>
+  <div class="col-8">
+    <ngx-utilitario-chat-conversacion [conversacion]="conversacion"></ngx-utilitario-chat-conversacion>
+  </div>
 </div>
