--- a/src/app/chat/chat/chat-detalle/chat-detalle.component.html
+++ b/src/app/chat/chat/chat-detalle/chat-detalle.component.html
@@ -10,7 +10,7 @@
         {{detalle.nombre}}
       </div>
       <div class="content">
-        {{detalle.mensaje}}
+        {{ultimoMensaje(detalle.mensaje)}}
       </div>
     </div>
     <div class="col-2 float-right text-right ngx-utilitario-fecha-not-chat">
