--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detalle/chat-detalle.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat-detalle/chat-detalle.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="col-2 float-right text-right ngx-utilitario-fecha-not-chat">
       <div class="content ngx-utilitario-fecha-chat">
-        {{detalle.fechaHora}}
+        {{ultimaFecha(detalle.mensaje)}}
       </div>
       <div *ngIf="detalle.notificacion>0" class="content ngx-utilitario-label-notificacion">
         {{detalle.notificacion}}
