--- a/src/app/chat/chat/chat-conversacion/chat-conversacion.component.html
+++ b/src/app/chat/chat/chat-conversacion/chat-conversacion.component.html
@@ -43,3 +43,4 @@
     </div>
   </div>
 </div>
+<ngx-utilitario-chat-detalle-agregar (nuevoMensaje)="enviarMensaje($event)"></ngx-utilitario-chat-detalle-agregar>
