--- a/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat.component.html
+++ b/projects/ngx-utilitario-rclt/src/lib/chat/chat/chat.component.html
@@ -8,6 +8,6 @@
       <ngx-utilitario-chat-lista [lista]="lista" (clickLista)="clickListaDetalle($event)"></ngx-utilitario-chat-lista>
     </div>
     <div class="col-8">
-      <ngx-utilitario-chat-conversacion [conversacion]="conversacion"></ngx-utilitario-chat-conversacion>
+      <ngx-utilitario-chat-conversacion [conversacion]="conversacion" (nuevoMensaje)="enviarMensaje($event)"></ngx-utilitario-chat-conversacion>
     </div>
 </div>
