--- a/src/app/chat/chat/chat-detalle-agregar/chat-detalle-agregar.component.html
+++ b/src/app/chat/chat/chat-detalle-agregar/chat-detalle-agregar.component.html
@@ -1,3 +1,4 @@
-<p>
-  chat-detalle-agregar works!
-</p>
+<form [formGroup]="mensajeForm">
+  <input formControlName="mensaje">
+</form>
+<button (click)="enviarMensaje()">enviar</button>
