--- a/src/app/chat/chat/chat-conversacion/chat-conversacion.component.html
+++ b/src/app/chat/chat/chat-conversacion/chat-conversacion.component.html
@@ -15,6 +15,8 @@
     </div>
     <div class="col-1">
       <i class="fa fa-trash-o" aria-hidden="true" alt="eliminar conversacion" (click)="eliminarConversacion()"></i>
+      <i *ngIf="!conversacion.bloqueo" class="fa fa-ban" aria-hidden="true" alt="Bloquear conversacion" (click)="bloquear()"></i>
+      <i *ngIf="conversacion.bloqueo" class="fa fa-unlock" aria-hidden="true" alt="Bloquear conversacion" (click)="desbloquear()"></i>
     </div>
   </div>
 </div>
@@ -45,4 +47,4 @@
     </div>
   </div>
 </div>
-<ngx-utilitario-chat-detalle-agregar (nuevoMensaje)="enviarMensaje($event)"></ngx-utilitario-chat-detalle-agregar>
+<ngx-utilitario-chat-detalle-agregar (nuevoMensaje)="enviarMensaje($event)" [disabled]="conversacion.bloqueo"></ngx-utilitario-chat-detalle-agregar>
