--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,8 @@
 </div>
 
 
+<div class="jumbotron">menu</div>
+<rclt-menu-dot></rclt-menu-dot>
 
 <div class="jumbotron">FormControl</div>
 <div class="container-fluid">
