--- a/src/app/chat/chat/chat-conversacion/chat-conversacion.component.html
+++ b/src/app/chat/chat/chat-conversacion/chat-conversacion.component.html
@@ -1,4 +1,4 @@
-<div class="col-12">
+<div class="container-fluid">
   <div class="row">
     <div class="col-2 img-fluid">
       <img class="img-fluid rounded-circle img-height-3-7" src="{{conversacion.img}}" />
@@ -15,36 +15,41 @@
     </div>
     <div class="col-1">
       <i class="fa fa-trash-o" aria-hidden="true" alt="eliminar conversacion" (click)="eliminarConversacion()"></i>
-      <i *ngIf="!conversacion.bloqueo" class="fa fa-ban" aria-hidden="true" alt="Bloquear conversacion" (click)="bloquear()"></i>
-      <i *ngIf="validarEstadoBLoqueado(conversacion.bloqueo)" class="fa fa-unlock" aria-hidden="true" alt="Bloquear conversacion" (click)="desbloquear()"></i>
+      <i *ngIf="!conversacion.bloqueo" class="fa fa-ban" aria-hidden="true" alt="Bloquear conversacion"
+        (click)="bloquear()"></i>
+      <i *ngIf="validarEstadoBLoqueado(conversacion.bloqueo)" class="fa fa-unlock" aria-hidden="true"
+        alt="Bloquear conversacion" (click)="desbloquear()"></i>
     </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-12" *ngFor="let item of conversacion.mensajes; let i=index ">
-    <div class="row" *ngIf="lineaDia(item.fecha,i)">
-      <div class="col-12 ngx-utilitario-chat-linea">
-        <span class="ngx-utilitario-chat-linea-span">
-          {{diferenciaDias(item.fecha)}}
-        </span>
+  <div class="row ngx-utilitario-cuerpo-Chat">
+    <div class="col-12" *ngFor="let item of conversacion.mensajes; let i=index ">
+      <div class="row" *ngIf="lineaDia(item.fecha,i)">
+        <div class="col-12 ngx-utilitario-chat-linea">
+          <span class="ngx-utilitario-chat-linea-span">
+            {{diferenciaDias(item.fecha)}}
+          </span>
+        </div>
       </div>
-    </div>
-    <div [ngClass]="escogerEstilo(item.tipoMensaje)">
-      <div>{{item.mensaje}}</div>
-      <div>{{item.hora}}
-        <span *ngIf="estadoMensajeEnviado(item.estadoMensaje, item.tipoMensaje)" class="ngx-utilitario-msj-enviado">
-          <i class="fa fa-check"></i>
-        </span>
-        <span *ngIf="estadoMensajeRecibido(item.estadoMensaje, item.tipoMensaje)" class="ngx-utilitario-msj-recibido">
-          <i class="fa fa-check"></i>
-          <i class="fa fa-check"></i>
-        </span>
-        <span *ngIf="estadoMensajeLeido(item.estadoMensaje, item.tipoMensaje)" class="ngx-utilitario-msj-leido">
-          <i class="fa fa-check"></i>
-          <i class="fa fa-check"></i>
-        </span>
+      <div [ngClass]="escogerEstilo(item.tipoMensaje)">
+        <div>{{item.mensaje}}</div>
+        <div>{{item.hora}}
+          <span *ngIf="estadoMensajeEnviado(item.estadoMensaje, item.tipoMensaje)" class="ngx-utilitario-msj-enviado">
+            <i class="fa fa-check"></i>
+          </span>
+          <span *ngIf="estadoMensajeRecibido(item.estadoMensaje, item.tipoMensaje)" class="ngx-utilitario-msj-recibido">
+            <i class="fa fa-check"></i>
+            <i class="fa fa-check"></i>
+          </span>
+          <span *ngIf="estadoMensajeLeido(item.estadoMensaje, item.tipoMensaje)" class="ngx-utilitario-msj-leido">
+            <i class="fa fa-check"></i>
+            <i class="fa fa-check"></i>
+          </span>
+        </div>
       </div>
     </div>
   </div>
+  <div class="row">
+    <ngx-utilitario-chat-detalle-agregar class="col-12 ngx-utilitario-chat-agregar" (nuevoMensaje)="enviarMensaje($event)"
+      [disabled]="conversacion.bloqueo"></ngx-utilitario-chat-detalle-agregar>
+  </div>
 </div>
-<ngx-utilitario-chat-detalle-agregar (nuevoMensaje)="enviarMensaje($event)" [disabled]="conversacion.bloqueo"></ngx-utilitario-chat-detalle-agregar>
