--- a/src/app/chat/chat/chat-conversacion/chat-conversacion.component.scss
+++ b/src/app/chat/chat/chat-conversacion/chat-conversacion.component.scss
@@ -1,34 +1,56 @@
 .ngx-utilitario-chat-linea {
-    display: block;
+    position: relative;
     text-align: center;
     overflow: hidden;
-    white-space: nowrap; 
+    font-size: 14px;
+    margin: 15px 50px;
+    text-transform: capitalize;
+    color: #9e9e9e;
 }
-
-.ngx-utilitario-chat-linea > span {
-    position: relative;
-    display: inline-block;
-}
-
-.ngx-utilitario-chat-linea > span:before,
-.ngx-utilitario-chat-linea > span:after {
+.ngx-utilitario-chat-linea::before {
+    background: #e0e3e4;
     content: "";
+    height: 1px;
+    right: 50%;
+    margin-right: 28px;
     position: absolute;
     top: 50%;
-    width: 40rem;
-    height: 0.08rem;
-    background: #9e9e9e;
+    width: 100%;
 }
+.ngx-utilitario-chat-linea::after{
+    background: #e0e3e4;
+    content: "";
+    height: 1px;
+    left: 50%;
+    margin-left: 28px;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+}
+// .ngx-utilitario-chat-linea > span {
+//     position: relative;
+//     display: inline-block;
+// }
 
-.ngx-utilitario-chat-linea > span:before {
-    right: 100%;
-    margin-right: 15px;
-}
+// .ngx-utilitario-chat-linea > span:before,
+// .ngx-utilitario-chat-linea > span:after {
+//     content: "";
+//     position: absolute;
+//     top: 50%;
+//     width: 100%;
+//     height: 0.08rem;
+//     background: #9e9e9e;
+// }
 
-.ngx-utilitario-chat-linea > span:after {
-    left: 100%;
-    margin-left: 15px;
-}
+// .ngx-utilitario-chat-linea > span:before {
+//     right: 100%;
+//     margin-right: 15px;
+// }
+
+// .ngx-utilitario-chat-linea > span:after {
+//     left: 100%;
+//     margin-left: 15px;
+// }
 
 
 .ngx-utilitario-msj-enviado{
@@ -41,4 +63,14 @@
 
 .img-height-3-7{
     height: 3.7rem;
+}
+
+
+.ngx-utilitario-chat-agregar{
+    position: absolute;
+    bottom: 0px;
+}
+
+.ngx-utilitario-cuerpo-Chat{
+    height: 10rem;
 }
